# SpaceInvaders

./: .gitignore  CMakeLists.txt
src/private/: entity.cpp  game.cpp  invader.cpp  laser.cpp  main.cpp  player.cpp
src/public/: entity.h  game.h  invader.h  laser.h  player.h
